crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__dart_fix_converges_without_losing_content.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output.clone())"
---
✖ Checks failed · 8 errors · fixed 1 file

packages/app/pubspec.yaml
  1:1  ✖ packages with a `flutter` section must declare `dependencies.flutter = { sdk: flutter }`
         dart/flutter-package-metadata-consistent
  1:1  ✖ internal dependency `helper` in `dependencies` should use `path:` references
         dart/internal-path-dependency-policy
  1:1  ✖ published Dart packages must not use `git:` for dependency `gitdep` in `dependencies`
         dart/no-git-dependencies-in-published-packages
  1:1  ✖ package `app` declares dependency_overrides without an allow-list entry
         dart/no-unexpected-dependency-overrides
  1:1  ✖ environment.sdk `>=2.12.0 <4.0.0` is not modern enough: lower bound must be at least 3.0.0
         dart/sdk-constraint-modern
  1:1  ✖ internal dependency `helper` in `dependencies` references `^1.0.0` but the workspace version is `1.2.3`
         dart/workspace-internal-version-consistency

packages/helper/pubspec.yaml
  1:1  ✖ missing required pubspec.yaml field `description`
         dart/required-package-fields
  1:1  ✖ pubspec.yaml must declare environment.sdk explicitly
         dart/sdk-constraint-present
