crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__dart_fixpoint_helper_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: helper
---
name: helper
version: 1.2.3
repository: https://github.com/acme/lint-rules/tree/main/packages/helper
