crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__dart_fixpoint_orphan_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: orphan
---
name: orphan
version: 0.2.0
publish_to: none
