crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__npm_fix_converges_without_losing_content.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output.clone())"
---
✖ Checks failed · 1 error · fixed 1 file

packages/shared/package.json
  1:1  ✖ missing required package.json field `description`
         npm/required-package-fields
