crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__npm_fixpoint_app_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: app
---
{
  "dependencies": {
    "shared": "workspace:*",
    "zod": "3.0.0"
  },
  "description": "App fixture package",
  "devDependencies": {
    "chalk": "5.0.0",
    "typescript": "5.0.0"
  },
  "license": "MIT",
  "name": "app",
  "repository": "https://github.com/acme/lint-rules/tree/main/packages/app",
  "version": "0.1.0"
}
