crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__npm_fixpoint_orphan_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: orphan
---
{
  "name": "orphan",
  "private": true,
  "version": "0.1.0"
}
