crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__npm_fixpoint_shared_manifest.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: shared
---
{
  "license": "MIT",
  "name": "shared",
  "repository": "https://github.com/acme/lint-rules/tree/main/packages/shared",
  "version": "0.1.0"
}
