crates/monochange_integration_tests/tests/snapshots/lint_rules_fix__npm_lint_reports_every_rule_without_fix.snap
---
source: crates/monochange_integration_tests/tests/lint_rules_fix.rs
expression: "normalize_workspace_paths(fixture.path(), output)"
---
✖ Checks failed · 9 errors · 7 fixable

package.json
  7:4  ✖ root package.json should not have production dependencies; move them to devDependencies
         npm/root-no-prod-deps · fixable

packages/app/package.json
  1:1   ✖ repository field is "https://wrong.example.com/app" but should be "https://github.com/acme/lint-rules/tree/main/packages/app"
          npm/manifest-repository · fixable
  7:4   ✖ dependencies in `dependencies` are not sorted alphabetically
          npm/sorted-dependencies · fixable
  8:6   ✖ internal dependency `shared` should use the workspace: protocol (found `0.1.0`)
          npm/workspace-protocol · fixable
  10:6  ✖ dependency `chalk` appears in multiple sections: dependencies, devDependencies
          npm/no-duplicate-dependencies · fixable

packages/orphan/package.json
  1:1  ✖ unmanaged npm-family packages must set private: true or be declared in monochange.toml
         npm/unlisted-package-private · fixable

packages/shared/package.json
  1:1  ✖ manifest is missing the repository field
         npm/manifest-repository · fixable
  1:1  ✖ missing required package.json field `description`
         npm/required-package-fields
  1:1  ✖ missing required package.json field `repository`
         npm/required-package-fields

Run `monochange check --fix` to fix 7 issues automatically.
